# devkitpro-autoconf

./: .gitmodules  .hgignore  Makefile.am  README.md  configure.ac
examples/3ds/hello-world/: Makefile.am  README.md  configure.ac
examples/3ds/hello-world/src/: main.cpp
examples/common/: bootstrap
examples/wii/hello-world/: Makefile.am  README.md  configure.ac
examples/wii/hello-world/src/: main.cpp
examples/wii/sdl2-bouncing-box/: Makefile.am  README.md  configure.ac
examples/wii/sdl2-bouncing-box/src/: main.cpp  show.cpp
examples/wiiu/hello-world/: Makefile.am  README.md  configure.ac
examples/wiiu/hello-world/src/: main.cpp
examples/wiiu/module/: Makefile.am  README.md  configure.ac
examples/wiiu/module/src/: main.cpp
examples/wiiu/plugin/: Makefile.am  README.md  bootstrap  configure.ac
examples/wiiu/plugin/src/: main.cpp
examples/wiiu/sdl2-bouncing-box/: Makefile.am  README.md  configure.ac
examples/wiiu/sdl2-bouncing-box/src/: Makefile.am  dump_sdl_event.cpp  dump_sdl_event.hpp  main.cpp  show.cpp  show.hpp  stdout-wiiu.cpp
examples/wiiu/sdl2-sound-test/: Makefile.am  configure.ac
examples/wiiu/sdl2-sound-test/src/: main.cpp
examples/wiiu/sdl2-swkbd/: Makefile.am  configure.ac
examples/wiiu/sdl2-swkbd/src/: main.cpp  sdl.cpp  sdl.hpp  sdl_debug.cpp  sdl_debug.hpp  sdl_ttf.cpp  sdl_ttf.hpp  stdout.cpp
examples/wiiu/sdl2-wiimotes/: Makefile.am  README.md  bootstrap  configure.ac
examples/wiiu/sdl2-wiimotes/src/: main.cpp  wiiu-stdout.cpp
macros/: Makefile.am  devkitpro.m4  devkitpro_3ds.m4  devkitpro_arm.m4  devkitpro_ppc.m4  devkitpro_wii.m4  devkitpro_wut.m4  wiiu-wums.m4  wiiu-wups.m4  wiiu_env_libbuttoncombo.m4  wiiu_env_libcontentredirection.m4  wiiu_env_libcurlwrapper.m4  wiiu_env_libfunctionpatcher.m4  wiiu_env_libkernel.m4  wiiu_env_libmappedmemory.m4  wiiu_env_libmocha.m4  wiiu_env_libnotifications.m4  wiiu_env_libromfs_wiiu.m4  wiiu_env_librpxloader.m4  wiiu_env_libsdutils.m4  wiiu_env_libwuhbutils.m4  wiiu_env_setup_lib.m4  wiiu_env_wums.m4  wiiu_env_wups.m4  wiiu_wums.m4  wiiu_wups.m4
