#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Devkitpro Autoconf], [0.1], [])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE


AC_CONFIG_FILES([Makefile
                 macros/Makefile])
AC_OUTPUT
